# psx_ohlcv

./: .env - Copy.example  .gitignore  16marbf.py  =0.9.0  APP_LINEAGE_DOCS_AND_ENHANCEMENT.md  CLAUDE.md  CLAUDE_CODE_PROMPT_ADD_COMMENTARY.md  CLAUDE_CODE_PROMPT_BATCH_SCORING.md  CLAUDE_CODE_PROMPT_FX_INTEGRATION2.md  CLAUDE_CODE_PROMPT_FX_INTEGRATION3.md  CLAUDE_CODE_PROMPT_FX_INTEGRATION3.md:Zone.Identifier  CLAUDE_CODE_PROMPT_LIVE_INDICES4.md  CLAUDE_CODE_PROMPT_LIVE_INDICES4.md:Zone.Identifier  CLAUDE_CODE_PROMPT_LIVE_TICKS.md  CLAUDE_CODE_PROMPT_LIVE_TICKS2.md  CLAUDE_CODE_PROMPT_LIVE_TICKS2.md:Zone.Identifier  CLAUDE_CODE_PROMPT_WS_RELAY.md  CLAUDE_CODE_PROMPT_WS_RELAY.md:Zone.Identifier  DB_CLEANUP_PROMPT.md  Makefile  ORACLE_CLOUD_PSX_SETUP.md  PHASE2_NEW_PAGES_PROMPT.md  PSX_DOWNLOADS_SCRAPER_PROMPT.md  PSX_FUND_AUDIT_PROMPT.md  PSX_OHLCV_5_FIXES.md  PSX_OHLCV_5_FIXES.md:Zone.Identifier  RAW_WS_LOGGING_PROMPT.md  README.md  SBP_DATASET_CODES.md  SBP_EASYDATA_PROMPT.md  SBP_EASYDATA_SERIES_MAP.md  STRATEGY_3_CVD_DIVERGENCE.md  STRATEGY_4_FUTURES_BASIS_ARB.md  STRATEGY_6_MACRO_REGIME_HMM.md  TICK_REPLAY_CLIENT_PROMPT.md  UBL_Banking_Systems_Reference.docx  UI_AUDIT_PROMPT.md  UI_FIX_PHASE1.md  UI_FIX_PHASE3.md  backfill2day.py  (+67 more)
.claude/: settings.json
.streamlit/: config.toml
_scratch/: commodity-data-sources-deep-dive.md  fundidprompt.md  khistocks-deep-dive-analysis.md  konia_raw.html  mufap_nav_downloader.py  pakfindata-fund-terminal.jsx  pmex-margins-direct-url-fetcher.md  pmex-ohlc-api-final-production.md  pmex-ohlc-report-analysis.md  pmex-portal-deep-dive-analysis.md  pmex_app.py
docs/: AGENTIC_AI_IMPLEMENTATION_PLAN.md  AUDIT_GAPS.md  DATABASE_SCHEMA.md  DATA_ACTIONS.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_COMPLETION_REPORT.md  PHASE3_IMPLEMENTATION.md  REGULAR_MARKET_AUDIT.md  ROADMAP.md  RUNBOOK.md  SCHEMA.md  THEMING.md  UI_VISUALIZATION_AUDIT.md  cli-commands-reference.md  manual_sync_commands.md  pakfindata-architecture.html  session_progress_2026_04_27.md
files/: PAKFINDATA_COMPLETE_GUIDE.md  pakfindata_deck.pptx  pakfindata_infographic.html
md/: 00PSX_DOWNLOADS_PROMPT.md  11PSX_MARKET_DATA_PROMPT.md  ADVANCED_GNN_STOCK_GRAPH.md  CLAUDE_CODE_PROMPT_BATCH_ADDITIVE.md  CLAUDE_CODE_PROMPT_FX_INTEGRATION.md  CLAUDE_CODE_PROMPT_FX_INTEGRATION3.md  CLAUDE_CODE_PROMPT_MICROSTRUCTURE_ANALYSIS.md  CLAUDE_CODE_PROMPT_MICROSTRUCTURE_V2.md  CSV_TO_JSONL_PROMPT.md  DUCKDB_MIGRATION_PROMPT.md  DUCKDB_WRITE_MIGRATION_PROMPT.md  FUND_PROMPT1_RISK_METRICS.md  FUND_PROMPT2_FIX_METADATA.md  FUND_PROMPT3_MISSING_ANALYTICS.md  FUND_PROMPT4_ETF_FIX.md  ML_PREDICTIONS_PROMPT.md  PAKFINDATA_DEMO_PROMPT.md  PAKFINDATA_PRODUCT_GUIDE.md  PHASE1_QUICK_WINS_PROMPT.md  PHASE3_DEEP_INTEGRATION_PROMPT.md  PSX_COMPANY_DEEP_SCRAPER.md  pakfingtfft.md  (+25 more)
(+747 files in other folders)
