[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psx_ohlcv"
version = "0.2.0"
description = "PSX OHLCV data fetcher"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests",
    "pandas",
    "lxml",
]

[project.scripts]
psxsync = "psx_ohlcv.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
ui = [
    "streamlit",
    "plotly",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
