[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psx_ohlcv"
version = "3.1.0"
description = "PSX OHLCV data fetcher"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests",
    "pandas",
    "lxml",
    "tabulate",
    "pdfplumber",
]

[project.scripts]
psxsync = "psx_ohlcv.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
ui = [
    "streamlit",
    "plotly",
    "websockets>=12.0",
    "streamlit-autorefresh>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
agentic = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running API server at localhost:8000",
]
