[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pakfindata"
version = "3.7.0"
description = "Pakistan Financial Data Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests",
    "pandas",
    "lxml",
    "tabulate",
    "pdfplumber",
]

[project.scripts]
pfsync = "pakfindata.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
ui = [
    "streamlit",
    "plotly",
    "websockets>=12.0",
    "streamlit-autorefresh>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
agentic = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running API server at localhost:8000",
]
